--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "dev": " nodemon app.js "
   },
   "dependencies": {
+    "bcrpyt": "^2.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
+    "redis": "^5.1.1",
     "zod": "^3.25.32"
   },
   "devDependencies": {
